--- a/style.css
+++ b/style.css
@@ -1,54 +1,70 @@
-.container{
-    margin: 0;
-    max-width: 100%;
-}
-.hideme {
-    display: none;
-}
-.overlay {
-    position: fixed; /* Sit on top of the page content */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
-    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer; /* Add a pointer on hover */
-}
-.overlay-content {
-    width: 50%;
-    height: 50%;
-    background-color: #fff;
-    margin: 0;
-    position: absolute;
-    top: 25%;
-    left: 25%;
+/*.container{*/
+/*    margin: 0;*/
+/*    max-width: 100%;*/
+/*}*/
+/*.hideme {*/
+/*    display: none;*/
+/*}*/
+/*.overlay {*/
+/*    position: fixed; !* Sit on top of the page content *!*/
+/*    width: 100%; !* Full width (cover the whole page) *!*/
+/*    height: 100%; !* Full height (cover the whole page) *!*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    right: 0;*/
+/*    bottom: 0;*/
+/*    background-color: rgba(0,0,0,0.5); !* Black background with opacity *!*/
+/*    z-index: 2; !* Specify a stack order in case you're using a different order for other elements *!*/
+/*    cursor: pointer; !* Add a pointer on hover *!*/
+/*}*/
+/*.overlay-content {*/
+/*    width: 50%;*/
+/*    height: 50%;*/
+/*    background-color: #fff;*/
+/*    margin: 0;*/
+/*    position: absolute;*/
+/*    top: 25%;*/
+/*    left: 25%;*/
 
+/*}*/
+
+/*.bd-placeholder-img {*/
+/*    font-size: 1.125rem;*/
+/*    text-anchor: middle;*/
+/*    -webkit-user-select: none;*/
+/*    -moz-user-select: none;*/
+/*    user-select: none;*/
+/*}*/
+
+/*.card-text {*/
+/*    text-align: start;*/
+/*}*/
+
+/*footer {*/
+/*    position: fixed;*/
+/*    height: 100px;*/
+/*    bottom: 0;*/
+/*    width: 100%;*/
+/*}*/
+
+/*@media (min-width: 768px) {*/
+/*    .bd-placeholder-img-lg {*/
+/*        font-size: 3.5rem;*/
+/*    }*/
+/*}*/
+
+html, body {
+    height: 100%;
 }
 
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-}
-
-.card-text {
-    text-align: start;
+main {
+    min-height: 100%;
 }
 
 footer {
     position: fixed;
-    height: 100px;
     bottom: 0;
     width: 100%;
-}
-
-@media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-    }
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
